# mxwhisper

./: .env  .gitignore  README.md  build-image.sh  deploy.sh  main.py  pyproject.toml
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 3bc82393171b_add_segments_to_transcriptions.py  4d2464737f28_add_topics_and_collections.py  4e0473c70895_add_authentik_token_metadata_to_users.py  8c215621414a_initial_migration.py  978715974dba_add_token_revocation_fields.py  cbb495b34d80_add_file_path_to_job_model.py  d036d6780f9b_add_segments_to_jobs.py  d4e5f6g7h8i9_add_users_table.py  dbe1c2f7c955_remove_authentik_token_identifier_and_.py  e5f6g7h8i9j0_add_roles_and_user_roles.py  fc1565c2b9ea_add_media_sourcing_tables.py  k1l2m3n4o5p6_add_embedding_vector.py  m1n2o3p4q5r6_add_job_chunks_table.py
app/: cli.py  config.py  logging_config.py  redis_client.py
app/auth/: __init__.py  authentik.py  jwt.py  permissions.py
app/data/: __init__.py  database.py  models.py  (+1 more)
config/: .env.example  alembic.ini
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
instructions/: plan.txt
scripts/: create_admin_user.py  create_api_user.py  generate_token.py  manage_jobs.py  manage_tokens.py  manage_users.py  seed_topics.py
tests/: test_admin_api.py  test_admin_integration.py  test_admin_setup.py  test_authenticated_workflow.py  test_collection_models.py  test_crud.py  test_direct.py  test_media_sourcing_models.py  test_media_sourcing_services.py  test_ollama_service.py  test_ollama_streaming.py  test_temporal.py  test_upload.py  test_vllm_service.py
(+67 files in other folders)
